<resources>
    <string name="app_name">BetterApp</string>
    <string name="textBox_text">Automatic Differentiation</string>
    <string name="button_text">Is this hard fax &#x1F4E0;&#x2753;&#x2753;&#x2753;</string>
    <string name="toast_text">Hard fax! &#x1F5E3;&#xFE0F;&#x1F5E3;&#xFE0F;&#x1F5E3;&#xFE0F;</string>
    <string name="equationLabelString">Expression: </string>
    <string name="x_valueLabelString">X Value:</string>
    <string name="confirmInput_button">Enter</string>
    <string name="resultHeader_text">Results:</string>
    <string name="resultDefault_text">Results are shown here…</string>
    <string name="demoFrag_text">This is an another fragment!</string>
    <string name="navigation_about_title">About Us</string>
    <string name="navigation_home_title">Home</string>
    <string name="equationFieldPlaceholder">Enter equation here...</string>
    <string name="x_valuePlaceholder">Enter x_value here...</string>
</resources>