<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBox_text"
        android:background="#001F3F"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/input_label"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        android:labelFor="@+id/inputField"
        />

    <EditText
        android:id="@+id/inputField"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:autofillHints="expression"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintLeft_toRightOf="@+id/inputLabel"
        />

    <Button
        android:id="@+id/inputConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmInput_button"
        android:background="#082A52"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLabel"
        />

    <TextView
        android:id="@+id/resultHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultHeader_text"
        android:fontFamily="monospace"
        android:background="#001F3F"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmButton"
        />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:text="@string/resultDefault_text"
        app:layout_constraintTop_toBottomOf="@+id/resultHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/faxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:background="#082A52"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>